# papouch

./: AGENTS.md  LICENSE  README.md  pyproject.toml  setup.py  source.sh
doc/: quido.md
papouch/: __init__.py  error.py  quido.py  quido_async.py
papouch/scripts/: cli.py  common.py  list.py  test.py  test_async.py
src/papouch/: __init__.py  quido.py
udev/: 20-papouch.rules
