[project]
name = "papouch"
version = "0.2.1"
dependencies = [
  "pyserial",
  "pyserial-asyncio",
  "requests",
]

[project.scripts]
quido-cli = "papouch.scripts.cli:main"
quido-list = "papouch.scripts.list:main"
quido-test = "papouch.scripts.test:main"
quido-async-test = "papouch.scripts.test_async:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
